Further modularized temporal coherence calculations
Created arrays Rho and Mu to be created in TurbSim.f90 and passed
into routines as temporal coherence input, similar to the way that
spectra are calculated in the code. Modified SetRndPhases and
RndPhases subroutines in TSsubs.f90 and in RandNum.f90 to take in
Rho and Mu as input. Modified technique in RndPhases to pull from
Rho and Mu. Created routine CalcTempCoh to populate Rho, Mu, with
values corresponding to the TC model specified in the input file.

--- a/turbsim-v2.0-modification/3-PDDs/compiling/makefile
+++ b/turbsim-v2.0-modification/3-PDDs/compiling/makefile
@@ -40,7 +40,7 @@ endif
    # Name of compiler to use and flags to use.
 FC      = gfortran
 
-FFLAGS  = -O2 -m$(BITS) -fbacktrace -ffree-line-length-none -x f95-cpp-input -DDOUBLE_PRECISION -fdefault-real-8
+FFLAGS  = -O2 -m$(BITS) -fbacktrace -ffree-line-length-none -x f95-cpp-input -DDOUBLE_PRECISION -fdefault-real-8 -fcheck=all
 LDFLAGS = -O2 -m$(BITS) -fbacktrace
 
 #FFLAGS  = -O0 -m$(BITS) -fbacktrace -ffree-line-length-none -x f95-cpp-input -g -pg
