--- a/turbsim-v2.0-modification/3-PDDs/compiling/makefile
+++ b/turbsim-v2.0-modification/3-PDDs/compiling/makefile
@@ -122,6 +122,7 @@ TurbSim_SOURCES =        \
 	Root_Searching.f90    \
 	RandNum.f90           \
 	Profiles.f90          \
+	TemporalCoherence.f90 \
 	BlankModVKM.f90       \
 	CohStructures.f90     \
 	TS_FileIO.f90         \
